--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-  <h1 class="text-center">MAIL</h1>
+  <h1 class="text-center">DADI</h1>
 
   <script src="js/script.js"></script>
   
