[add] js to dice game

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
   <title>Document</title>
 </head>
 <body>
-
-  <h1 class="text-center">DADI</h1>
+<div class="container my-5 text-center">
+  <h1 class="">GIOCO dei DADI</h1>
+  <h2 id="user"></h2>
+  <h2 id="pc"></h2>
+  <h1 id="result"></h1>
+</div>
 
   <script src="js/script.js"></script>
   
